[tool.poetry]
name = "pytest-proj"
version = "0.1.0"
description = ""
authors = ["vladislav <vladisla.sv.299563@gmail.com>"]
readme = "README.md"
packages = [{include = "pytest_proj"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
